--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,8 @@
 @import url('https://fonts.cdnfonts.com/css/quicksand');
 
 :root {
-  --CL-neutral-white: #ffffff;
+  --CL-neutral-white: #fff;
   --CL-neutral-black: #000;
-
   --FF-nunito: 'Nunito', sans-serif;
   --FF-quicksan: 'Quicksand', sans-serif;
 }
