--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
 @import url('https://fonts.cdnfonts.com/css/nunito');
 @import url('https://fonts.cdnfonts.com/css/quicksand');
+@import url('https://fonts.cdnfonts.com/css/poppins');
 
 :root {
+  --CL-primary-purple: #8f00ff;
+  --CL-primary-cyan: #47e9ff;
+
   --CL-neutral-white: #fff;
-  --CL-neutral-black: #000;
+  --CL-neutral-black: #0d0d0d;
   --FF-nunito: 'Nunito', sans-serif;
   --FF-quicksan: 'Quicksand', sans-serif;
+  --FF-poppins: 'Poppins', sans-serif;
 }
 
 *,
@@ -20,7 +25,8 @@ body {
 }
 
 body {
-  font-family: var(--FF-nunito);
+  font-family: var(--FF-poppins);
+  background-color: #000;
 }
 
 h1,
@@ -28,7 +34,7 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: var(--FF-nunito);
+  font-family: var(--FF-poppins);
 }
 
 p,
@@ -36,7 +42,7 @@ button,
 input,
 label,
 textarea {
-  font-family: var(--FF-quicksan);
+  font-family: var(--FF-poppins);
 }
 
 img,
@@ -46,4 +52,32 @@ iframe,
 video {
   display: block;
   max-width: 100%;
+}
+
+/* Container */
+.container {
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+/* Buttons */
+
+.btn {
+  padding: 0.75em 1em;
+  background: none;
+  border: none;
+  border-radius: 2em;
+  cursor: pointer;
+  transition: 0.15s;
+}
+
+.btn-primary {
+  background-color: var(--CL-primary-cyan);
+}
+
+@media (min-width: 768px) {
+  .btn-primary:hover {
+    background-color: var(--CL-neutral-white);
+  }
 }
