--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.cdnfonts.com/css/nunito');
 @import url('https://fonts.cdnfonts.com/css/quicksand');
 @import url('https://fonts.cdnfonts.com/css/poppins');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
   --CL-primary-purple: #8f00ff;
@@ -55,16 +58,28 @@ video {
 }
 
 /* Container */
-.container {
+/* .container {
   width: 90%;
-  max-width: 1200px;
+  max-width: 1400px;
   margin: 0 auto;
+}
+ */
+
+/* Display */
+.d-none {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .d-none {
+    display: unset;
+  }
 }
 
 /* Buttons */
 
 .btn {
-  padding: 0.75em 1em;
+  padding: 0.75em 1.5em;
   background: none;
   border: none;
   border-radius: 2em;
@@ -76,8 +91,15 @@ video {
   background-color: var(--CL-primary-cyan);
 }
 
+.btn-primary-outline {
+  outline: 1px solid var(--CL-primary-cyan);
+  color: var(--CL-primary-cyan);
+}
+
 @media (min-width: 768px) {
-  .btn-primary:hover {
+  .btn:hover {
     background-color: var(--CL-neutral-white);
+    color: var(--CL-neutral-black);
+    outline: none;
   }
 }
