--- a/src/components/Header/NavBar/NavBar.css
+++ b/src/components/Header/NavBar/NavBar.css
@@ -1,5 +1,5 @@
 .active {
-  @apply bg-[var(--CL-neutral-black)] md:bg-transparent py-2 text-white rounded rounded-lg;
+  @apply bg-[var(--CL-neutral-black)] md:bg-transparent text-white rounded rounded-lg;
 }
 
 @media (min-width: 768px) {
