Create NotFound page and improve UX.

--- a/src/App.css
+++ b/src/App.css
@@ -128,3 +128,7 @@ video {
 .active {
   @apply bg-purple;
 }
+
+.bg-gradient-primary {
+  @apply from-[var(--CL-primary-purple)] to-[var(--CL-primary-cyan)];
+}
