--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.cdnfonts.com/css/nunito');
-@import url('https://fonts.cdnfonts.com/css/quicksand');
 @import url('https://fonts.cdnfonts.com/css/poppins');
 
 @tailwind base;
@@ -50,7 +48,6 @@ body {
 
 body {
   font-family: var(--FF-poppins);
-  background-color: var(--CL-neutral-black);
 }
 
 h1,
@@ -76,6 +73,14 @@ iframe,
 video {
   display: block;
   max-width: 100%;
+}
+
+button {
+  @apply transition md:hover:scale-105 md:active:scale-95;
+}
+
+.active {
+  @apply md:underline text-cyan-300 md:underline-offset-8;
 }
 
 /* Display */
@@ -125,9 +130,9 @@ video {
   @apply bg-[var(--CL-primary-cyan)];
 }
 
-@media (max-width: 640px) {
+@media (max-width: 768px) {
   .active {
-    @apply text-white bg-purple;
+    @apply text-white no-underline bg-purple;
   }
 }
 
