--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,7 @@
 }
 
 :root {
-  --CL-primary-purple: rgb(84, 0, 240);
-  --CL-primary-cyan: #47e9ff;
+  --CL-primary-purple: #271033;
   --CL-neutral-white: #fff;
   --CL-neutral-black: #161616;
   --FF-nunito: 'Nunito', sans-serif;
