--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
 }
 
 :root {
-  --CL-primary-purple: #1d1a31;
+  --CL-primary-purple: #171527;
   --CL-neutral-white: #fff;
   --CL-neutral-black: #161616;
   --FF-signate-grotesk: 'Signate Grotesk', sans-serif;
