--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,15 @@ body {
   font-family: var(--FF-poppins);
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--FF-ica-rubrik);
+}
+
 p,
 button,
 input,
