--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,15 @@ textarea {
   font-family: var(--FF-poppins);
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--FF-ica-rubrik);
+}
+
 img,
 picture,
 svg,
